--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   <script src="https://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>
   <script src="https://cdn.bootcss.com/vuex/3.0.1/vuex.min.js"></script>
   <script src="https://cdn.bootcss.com/nprogress/0.2.0/nprogress.min.js"></script>
+  <script src="https://cdn.bootcss.com/animejs/2.2.0/anime.min.js"></script>
   <title>wowo</title>
 </head>
 <body>
